More variabilizing of the listing page.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -23,4 +23,11 @@ amenities:
   - "VIBRANT LANDSCAPING"
   - "ONSITE SECURITY"
   - "COMPLIMENTARY CLEANING SERVICE"
+gallery-images:
+  - "/images/example.jpg"
+  - "/images/example.jpg"
+  - "/images/example.jpg"
+
+latitude: 33.979449
+longitude: -118.413002
 ---
