--- a/_listings/1.md
+++ b/_listings/1.md
@@ -30,4 +30,12 @@ gallery-images:
 
 latitude: 33.979449
 longitude: -118.413002
+info-title: <strong>CREATIVE OFFICE SPACE AT</strong>THE HEART OF SILICON BEACH.
+info-text: >
+            Playa Jefferson is a dynamic office campus located in Playa Vista.
+            The campus features over 200,000 square feet of creative office space, with
+            dramatic and distincitive architecure, substantial experior shared communal
+            space, easy access to both the 90 and the 405 freeways, and is directly across
+            the street from all of the amenitite at Runway Playa Vista.
+floorplan-image: /images/fake-plans.jpg
 ---
