Remove HTML from address line tag.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -1,6 +1,6 @@
 ---
 address-line-1: 2467 JEFFERSON AVE,
-address-line-2: "<strong>PLAYA</strong> VISTA"
+address-line-2: "PLAYA VISTA"
 amenities:
 - FIBER INTERNET
 - COMMUNAL BIKES
