Include babel transpiler. Put home page intro paragraph into a variable.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -16,6 +16,7 @@ gallery-images:
 - "/images/example.jpg"
 - "/images/example.jpg"
 - "/images/example.jpg"
+property-preview-image: "/images/generic.jpg"
 highlights:
 - 200,000 SQ FT
 - CENTRAL LOCATION
