Use variables for prop preview (on listings page) and variable for header image on listing page.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -17,6 +17,7 @@ gallery-images:
 - "/images/example.jpg"
 - "/images/example.jpg"
 property-preview-image: "/images/generic.jpg"
+property-header: "/images/generic.jpg"
 highlights:
 - 200,000 SQ FT
 - CENTRAL LOCATION
