Use ajax via jquery for posting the contact-form. Include a loading state with spinner after form submission. Add box shadow and change stock image for testimonials.

--- a/_testimonials/1.md
+++ b/_testimonials/1.md
@@ -2,5 +2,5 @@
 date: 2017-08-31 23:25:50 +0000
 name: Jane Doe 4
 text: I found that I could be more productive at GroundSource!
-userImg: images/sample-person.png
+userImg: images/stock_business.jpg
 ---
