--- a/_testimonials/3.md
+++ b/_testimonials/3.md
@@ -2,5 +2,5 @@
 date: 2017-08-31 23:25:50 +0000
 name: Tina Mac
 text: GroundSource leasing agents were both professional and friendly.
-userImg: images/sample-person.png
+userImg: images/stock_business.jpg
 ---
