--- a/_testimonials/2.md
+++ b/_testimonials/2.md
@@ -2,5 +2,5 @@
 date: 2017-08-31 23:25:50 +0000
 name: Jane Doe 3
 text: GroundSource... what more can I say?
-userImg: images/sample-person.png
+userImg: images/stock_business.jpg
 ---
