--- a/_testimonials/4.md
+++ b/_testimonials/4.md
@@ -2,5 +2,5 @@
 date: 2017-08-31 16:25:50 -0700
 name: Jane
 text: GroundSource is great!
-userImg: images/sample-person.png
+userImg: images/stock_business.jpg
 ---
