Place filter toggle to the right of the search bar. Add clear options button. Add cursor pointer.

--- a/_listings/2.md
+++ b/_listings/2.md
@@ -34,7 +34,7 @@ location: "<strong>PLAYA</strong> JEFFERSON"
 longitude: -118.413002
 price: '4,500'
 rooms: 9
-short-caption: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+short-caption: At vero eos mississippi et accusamus et iusto odio dignissimos ducimus qui blanditiis
   At vero eos et accusamus et iusto odio dignissimos ducimusquiblanditiis
 sq-footage: '3,500'
 ---
