--- a/_listings/1.md
+++ b/_listings/1.md
@@ -37,7 +37,7 @@ longitude: -118.413002
 price: '4,500'
 rooms: 9
 short-caption: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-  At vero eos et accusamus et iusto odio dignissimos ducimusquiblanditiis
+  At vero eos et accusamus et iusto odio dignissimos pool ducimusquiblanditiis
 sq-footage: '3,500'
 type: LEASE
 ---
