--- a/_listings/1.md
+++ b/_listings/1.md
@@ -31,8 +31,7 @@ highlights:
 - 200,000 SQ FT
 info-text: |
   Playa Jefferson is a dynamic office campus located in Playa Vista. The campus features over 200,000 square feet of creative office space, with dramatic and distincitive architecure, substantial experior shared communal space, easy access to both the 90 and the 405 freeways, and is directly across the street from all of the amenitite at Runway Playa Vista.
-info-title: "<strong>CREATIVE OFFICE SPACE AT&nbsp;</strong>THE HEART OF SILICON BEACH."
-info-title-print: "<strong>CREATIVE OFFICE SPACE AT</strong><br />THE HEART OF SILICON BEACH."
+info-title: "<strong>CREATIVE OFFICE SPACE AT </strong>THE HEART OF SILICON BEACH."
 label: LEASE
 latitude: 33.979449
 layout: listing
