Place new amenities on listing preview section.

--- a/_listings/5.md
+++ b/_listings/5.md
@@ -30,7 +30,7 @@ latitude: 33.979449
 layout: listing
 location: "<strong>PLAYA</strong> JEFFERSON"
 longitude: -118.413002
-price: '4,500'
+rate: '4,500'
 rooms: 9
 short-caption: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
   At vero eos et accusamus jackson et iusto odio dignissimos ducimusquiblanditiis
