--- a/_listings/9.md
+++ b/_listings/9.md
@@ -25,12 +25,12 @@ highlights:
 info-text: |
   Playa Jefferson is a dynamic office campus located in Playa Vista. The campus features over 200,000 square feet of creative office space, with dramatic and distincitive architecure, substantial experior shared communal space, easy access to both the 90 and the 405 freeways, and is directly across the street from all of the amenitite at Runway Playa Vista.
 info-title: "<strong>CREATIVE OFFICE SPACE AT</strong>THE HEART OF SILICON BEACH."
-label: LEASE
+label: RENT
 latitude: 33.979449
 layout: listing
 location: "<strong>PLAYA</strong> JEFFERSON"
 longitude: -118.413002
-price: '4,500'
+rate: '4,500'
 rooms: 9
 short-caption: At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
   At vero eos et accusamus et iusto odio dignissimos ducimusquiblanditiis
