Change the listing filter from 'rent' to 'buy'... updates the fitler logic accordingly. Allow listings to be simulataneously for lease and buy.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -1,5 +1,7 @@
 ---
 title: "1"
+lease: true
+buy: true
 name: "<strong>playa</strong> jeferson"
 address-line-1: 2467 JEFFERSON AVE,
 address-line-2: "<strong>PLAYA</strong> VISTA"
