Remove placeholder listings.. start entering dating for Ventura blcd.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -1,10 +1,10 @@
 ---
-title: "1"
+title: "13400 Ventura"
 lease: true
-buy: true
-name: "<strong>playa</strong> jeferson"
-address-line-1: 2467 JEFFERSON AVE,
-address-line-2: "<strong>PLAYA</strong> VISTA"
+sale: false
+name: "Sherman Oaks"
+address-line-1: "13400 Ventura Boulevard,"
+address-line-2: "Sherman Oaks"
 hours: "Mon - Sun: 6am - 4pm"
 phone: "(310) 428-0203"
 amenities:
