Big gallery image bug (for print). Add some protection against the user not entering latitude  / longitude and/or not having a floorplan image.

--- a/_listings/1.md
+++ b/_listings/1.md
@@ -8,7 +8,7 @@ amenities:
 available: true
 buy: false
 date: 2017-08-31 22:14:57 +0000
-floorplan-image: "/images/fake-plans.jpg"
+floorplan-image:
 gallery-images:
 - "/images/img2.png"
 - "/images/img3.png"
@@ -22,7 +22,6 @@ info-text: 'A free-standing, two-story office building. Your employees will appr
   with close proximity to the 101 and 405 freeways, as well as ample parking make
   this Sherman Oaks gem an easy choice. '
 info-title: Free standing-building for lease in Sherman Oaks.
-label: LEASE
 latitude: 34.1470719
 layout: listing
 lease: true
