Remove a lot of opacity overriding. New avatars for testimonials. Otras cosas tambien.

--- a/_testimonials/1.md
+++ b/_testimonials/1.md
@@ -1,6 +1,6 @@
 ---
 date: 2017-08-31 23:25:50 +0000
-name: Jane Doe 4
+name: Jane Doe
 text: I found that I could be way more productive at GroundSource!
-userImg: images/stock_business.jpg
+userImg: images/stock_businesswoman.jpg
 ---
