--- a/_testimonials/2.md
+++ b/_testimonials/2.md
@@ -1,6 +1,6 @@
 ---
 date: 2017-08-31 23:25:50 +0000
-name: Jane Doe 3
+name: Jim Doe
 text: GroundSource... what more can I say??
 userImg: images/stock_business.jpg
 ---
