--- a/_testimonials/4.md
+++ b/_testimonials/4.md
@@ -1,6 +1,6 @@
 ---
 date: 2017-08-31 23:25:50 +0000
-name: Jane
+name: Kimberly Doe
 text: GroundSource is great! My experience has been wonderful!!
-userImg: images/stock_business.jpg
+userImg: images/businesswoman2.jpg
 ---
