--- a/_listings/1.md
+++ b/_listings/1.md
@@ -21,7 +21,7 @@ info-text: 'A free-standing, two-story office building. Your employees will appr
   its close proximity to a number of restaurants for a scrumptious lunch. This coupled
   with close proximity to the 101 and 405 freeways, as well as ample parking make
   this Sherman Oaks gem an easy choice.  '
-info-title: Free standing-building for lease in Sherman Oaks.
+info-title: Free-standing building for lease in Sherman Oaks.
 label: LEASE
 latitude: 34.1470719
 layout: listing
