--- a/_listings/1.md
+++ b/_listings/1.md
@@ -43,5 +43,5 @@ sale: false
 short-caption: Free-standing building for lease in Sherman Oaks.
 sq-footage: 6433
 type: ''
-hidden: false
+hidden: true
 ---
