Allow multiple floorplan images to be uploaded per listing.

--- a/_listings/3.md
+++ b/_listings/3.md
@@ -30,7 +30,8 @@ info-text: 6534 W. Sunset Boulevard is going through a complete transformation a
   and theaters. The property features a large outdoor courtyard and two new restaurants
   including an award winning New York restaurateur and Tocaya, a modern and organic
   Mexican fusion, both anticipated to open 4th quarter 2017.
-floorplan-image: "/images/6534_Sunset_floorplan.jpg"
+floorplans:
+  - "/images/6534_Sunset_floorplan.jpg"
 available: 2018-05-02 22:34:41 +0000
 lease: false
 sublease: true
