--- a/_listings/6.md
+++ b/_listings/6.md
@@ -28,7 +28,8 @@ info-title: Office sublease in Downtown Burbank
 info-text: 'Open plan, perimeter offices, kitchen and a conference room. A corner
   suite with natural light .High-end existing improvements. Numerous amenities within
   walking distance '
-floorplan-image: "/images/250_Olive_FP.jpg"
+floorplans:
+  - "/images/250_Olive_FP.jpg"
 terms: Sublease term thru February 28, 2019
 lease: false
 sublease: true
