--- a/_listings/7.md
+++ b/_listings/7.md
@@ -34,7 +34,8 @@ info-text: Open plan, two offices and a conference room. All utilities included,
   to pay for phones, internet, and cleaning.Tree top views, exposed ceilings and abundant
   natural light. An accessible balcony runs the length of the space. Numerous amenities
   within walking distance.
-floorplan-image: "/images/Overland FINAL Floor Plan.JPG"
+floorplans:
+  - "/images/Overland FINAL Floor Plan.JPG"
 terms: Sublease term thru March 31, 2019
 lease: false
 sublease: true
