--- a/_listings/2.md
+++ b/_listings/2.md
@@ -21,7 +21,8 @@ latitude: 34.061195
 longitude: -118.414711
 property-header: "/images/1875_century_park_east-1.jpg"
 property-preview-image: "/images/1875_century_park_east.jpg"
-floorplan-image: "/images/CPE_floor plan.jpg"
+floorplans:
+  - "/images/CPE_floor plan.jpg"
 short-caption: Century City office sublease in Los Angeles
 sq-footage: '13,149'
 rate: Negotiable
