--- a/_listings/4.md
+++ b/_listings/4.md
@@ -8,7 +8,8 @@ address-line-1: 11859 Wilshire Blvd.
 address-line-2: Los Angeles, CA 90025
 short-caption: Creative office space for lease in Brentwood
 sq-footage: 47,698 SF
-floorplan-image: "/images/Floor Plan FINAL.JPG"
+floorplans:
+  - "/images/Floor Plan FINAL.JPG"
 gallery-images:
 - "/images/11859_wilshire-1.jpg"
 - "/images/IMG_2340.1.jpg"
