--- a/_listings/5.md
+++ b/_listings/5.md
@@ -31,7 +31,8 @@ info-title: Nicely built out space for sublease in Glendale
 info-text: 550 N. Brand is LEED Gold Certified. Nicely built out space for sublease,
   with perimeter offices, interior workstations, and multiple conference rooms. Furniture,
   fixtures, and equipment are negotiable.
-floorplan-image: "/images/BrandBlvd_Floorplan.jpg"
+floorplans:
+  - "/images/BrandBlvd_Floorplan.jpg"
 available: 2018-06-15 07:00:00 +0000
 lease: false
 buy: false
