- Update the listings template to consume new "availabilities" collection - Include some availabilities on the Wilshire listing

--- a/_listings/4.md
+++ b/_listings/4.md
@@ -26,6 +26,9 @@ info-text: "\nA building renovation is under way at 11859 Wilshire! Situated bet
 property-preview-image: "/images/11859_wilshire_.jpg"
 property-header: "/images/11859_wilshire_-1.jpg"
 rate: Negotiable
+availabilities:
+- "Suite 600: 9,148 SF (divisible)"
+- "Suite 510: 3,294 SF (not divisible)"
 highlights:
 - Easy access to both 405 and 10 freeways
 - Ocean, mountain and city views
